--- a/index.ipynb
+++ b/index.ipynb
@@ -26,12 +26,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "def bayes(P_a, P_b, P_b_given_a):\n",
     "    #Your code here\n",
+    "    P_a_given_b = (P_b_given_a*P_a)/ P_b\n",
     "    return P_a_given_b"
    ]
   },
@@ -50,6 +51,28 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "p_blemish = 1*.15 + 0.2*.85"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "P_cancer_blemishes = p_blemishes_cancer*p_cancer)/p_blemish)\n",
+    "P(cancer|blemishes) = 1*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -184,7 +207,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
