--- a/index.ipynb
+++ b/index.ipynb
@@ -63,7 +63,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "P_cancer_blemishes = p_blemishes_cancer*p_cancer)/p_blemish)\n",
+    "P_cancer_blemish = p_blemishes_cancer*p_cancer)/p_blemish)\n",
     "P(cancer|blemishes) = 1*"
    ]
   },
