--- a/index.ipynb
+++ b/index.ipynb
@@ -63,8 +63,8 @@
    "outputs": [],
    "source": [
     "\n",
-    "P_cancer_blemish = p_blemishes_cancer*p_cancer)/p_blemish)\n",
-    "P(cancer|blemishes) = 1*"
+    "P_cancer_blemish = p_blemish_cancer*p_cancer)/p_blemish)\n",
+    "P(cancer|blemish) = 1*"
    ]
   },
   {
