Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -62,9 +62,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "P_cancer_blemish = p_blemish_cancer*p_cancer)/p_blemish)\n",
-    "P(ca = 1*"
+    "# P_cancer_blemish = p_blemish_cancer*p_cancer)/p_blemish)\n",
+    "P_cancer_blemish = 1*"
    ]
   },
   {
