--- a/index.ipynb
+++ b/index.ipynb
@@ -63,7 +63,7 @@
    "outputs": [],
    "source": [
     "# P_cancer_blemish = p_blemish_cancer*p_cancer)/p_blemish)\n",
-    "P_cancer_blemish = 1*"
+    "P_cancer_blemish = bayes()"
    ]
   },
   {
