Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -68,21 +68,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.46875\n"
-     ]
+     "data": {
+      "text/plain": [
+       "0.46875"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Your code here\n"
+    "#Your code here\n",
+    "P_cancer_blemish"
    ]
   },
   {
