--- a/index.ipynb
+++ b/index.ipynb
@@ -62,8 +62,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Your code here\n",
     "# P_cancer_blemish = p_blemish_cancer*p_cancer)/p_blemish)\n",
-    "P_cancer_blemish = bayes(0.15,p_blemish,1)"
+    "P_cancer_blemish = bayes(0.15,p_blemish,1)\n",
+    "P_cancer_blemish"
    ]
   },
   {
