--- a/index.ipynb
+++ b/index.ipynb
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
        "0.3333333333333333"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,7 +140,7 @@
    "source": [
     "# Your solution P(2boys|1 of 2 children is a boy)\n",
     "P_a = 1/4 #Probability of 2 boys\n",
-    "P_b = 3/4 #Probability older child is a boy\n",
+    "P_b = 3/4 #Probability 1 of 2 children is a boy\n",
     "P_b_given_a = 1 #Probability older child is a boy if 2 boys\n",
     "bayes(P_a, P_b, P_b_given_a)"
    ]
