Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -179,7 +179,11 @@
     }
    ],
    "source": [
-    "# Your solution P(Disease | positive test)"
+    "# Your solution P(Disease | positive test)\n",
+    "P_a = 0.99 #Probability of 2 boys\n",
+    "P_b = .5 #Probability older child is a boy\n",
+    "P_b_given_a = 1 #Probability older child is a boy if 2 boys\n",
+    "bayes(P_a, P_b, P_b_given_a)"
    ]
   },
   {
