Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -164,25 +164,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.5"
+       "0.01"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Your solution P(Disease | positive test)\n",
-    "P_a = 0.99 #Probability of 2 boys\n",
-    "P_b = .5 #Probability older child is a boy\n",
-    "P_b_given_a = 1 #Probability older child is a boy if 2 boys\n",
+    "P_a = 0.1 #Probability of 2 boys\n",
+    "P_b = 0.99 #Probability older child is a boy\n",
+    "P_b_given_a = 0.01 #Probability older child is a boy if 2 boys\n",
     "bayes(P_a, P_b, P_b_given_a)"
    ]
   },
