--- a/index.ipynb
+++ b/index.ipynb
@@ -181,7 +181,7 @@
    "source": [
     "# Your solution P(Disease | positive test)\n",
     "P_a = 0.1 #Probability of disease\n",
-    "P_b = 0.99 #Probability older child is a boy\n",
+    "P_b = (0.0.99 #Probability testing positive for a disease\n",
     "P_b_given_a = 0.01 #Probability older child is a boy if 2 boys\n",
     "bayes(P_a, P_b, P_b_given_a)"
    ]
