Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -181,8 +181,8 @@
    "source": [
     "# Your solution P(Disease | positive test)\n",
     "P_a = 0.01 #Probability of disease\n",
-    "P_b = (0.01*0.99) +(0.99) #Probability testing positive for a disease\n",
-    "P_b_given_a = 0.01 #Probability older child is a boy if 2 boys\n",
+    "P_b = (0.01*0.99) +(0.99*0.01) #Probability testing positive for a disease\n",
+    "P_b_given_a = 0.01 #Probability of test\n",
     "bayes(P_a, P_b, P_b_given_a)"
    ]
   },
