--- a/index.ipynb
+++ b/index.ipynb
@@ -164,16 +164,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.01"
+       "0.5"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +182,7 @@
     "# Your solution P(Disease | positive test)\n",
     "P_a = 0.01 #Probability of disease\n",
     "P_b = (0.01*0.99) +(0.99*0.01) #Probability testing positive for a disease\n",
-    "P_b_given_a = 0.01 #Probability of test\n",
+    "P_b_given_a = 0.99 #Probability of testing positive given disease\n",
     "bayes(P_a, P_b, P_b_given_a)"
    ]
   },
